# inspection

inspection/: .gitignore  README.md
inspection/docs/: ESP32S3_CAMERA_API.md  IMPLEMENTATION_LANDING_NOTES.md  SPLIT_DEPLOYMENT.md  STM32_SERIAL_PROTOCOL.md
inspection/release/: runtime_validation_matrix.yaml  split_release_manifest.yaml  version_manifest.yaml
inspection/scripts/: bootstrap_runtime_validation_evidence.py  build_release_bundle.sh  build_source_package.sh  render_runtime_validation_audit.py  render_split_release_manifest.py  run_firmware_contract_tests.sh  run_release_validation.sh  run_runtime_validation_matrix.py  runtime_validation_common.py  validate_runtime_validation_matrix.py  (+2 more)
inspection/upper_computer/src/inspection_bringup/: package.xml
inspection/upper_computer/src/inspection_bringup/inspection_bringup/: runtime_launch_config.py  sim_stack_common.py
inspection/upper_computer/src/inspection_bringup/launch/: _sim_stack_common.py  full_stack.launch.py  offline_replay.launch.py  real_station.launch.py
inspection/upper_computer/src/inspection_decision/: package.xml  setup.py
inspection/upper_computer/src/inspection_decision/inspection_decision/: arbitration_engine.py  decision_node.py  policy_engine.py  rules.py
inspection/upper_computer/src/inspection_diagnostics/: package.xml  setup.cfg  setup.py
inspection/upper_computer/src/inspection_diagnostics/inspection_diagnostics/: diagnostic_rules.py  diagnostics_aggregator.py  diagnostics_node.py  subscription_policy.py
inspection/upper_computer/src/inspection_hmi/: package.xml  setup.py
inspection/upper_computer/src/inspection_hmi/inspection_hmi/: hmi_node.py
inspection/upper_computer/src/inspection_interfaces/: CMakeLists.txt  package.xml
inspection/upper_computer/src/inspection_interfaces/action/: CreateBatch.action  DiagnosticTestLighting.action  ExecuteReplay.action  ExportBatch.action  ResetStation.action  RunBenchmark.action  SetMaintenanceMode.action  StartBatch.action  StopStation.action  SwitchRecipeWithValidation.action
inspection/upper_computer/src/inspection_interfaces/msg/: BridgeHandshakeCompleteEvent.msg  BridgeHeartbeatEvent.msg  DecisionPublishedEvent.msg  FaultRaisedEvent.msg  FsmTransitionEvent.msg  SupervisorCommand.msg  SupervisorStateEnvelope.msg  VisionFrameAcquiredEvent.msg
inspection/upper_computer/src/station_bridge/: package.xml  setup.py
inspection/upper_computer/src/station_bridge/station_bridge/: adapter_registry.py  capability_registry.py  command_registry.py  mock_adapter.py  runtime_support.py  rx_parser.py  serial_adapter.py  session_coordinator.py  session_state.py  station_bridge_node.py  watchdog.py
inspection_split_platformio_final_implemented/: IMPLEMENTATION_SUMMARY.md  README.md
inspection_split_platformio_final_implemented/upper_computer/src/inspection_fsm/: package.xml  setup.cfg  setup.py
inspection_split_platformio_final_implemented/upper_computer/src/inspection_fsm/inspection_fsm/: artifact_registry.py  cycle_runtime.py  fsm_core.py  fsm_node.py  manual_control_policy.py  ownership_rules.py  recovery_policy.py  runtime_context.py
inspection_split_platformio_final_implemented/upper_computer/src/inspection_hmi_gateway/: package.xml  setup.cfg  setup.py
inspection_split_platformio_final_implemented/upper_computer/src/inspection_hmi_gateway/inspection_hmi_gateway/: action_contract.py  action_execution_runtime.py  action_executor_node.py  action_handlers.py  action_job_service.py  app.py  app_components.py  app_facade.py  export_service.py  gateway_runtime.py  main.py  read_model_policy.py  read_model_projection_repair.py  read_model_replay_queries.py  read_model_repository.py  read_model_trace_queries.py  recipe_components.py  recipe_store.py  replay_service.py  result_store.py  ros_action_bridge.py  ros_bridge.py  runtime_components.py  runtime_projection.py  ws_hub.py
inspection_split_platformio_final_implemented/upper_computer/src/inspection_hmi_gateway/inspection_hmi_gateway/server/: auth.py  auth_components.py  bootstrap.py  command_services.py  context.py  main.py  metadata_database.py  metadata_table_access.py  persistence.py  query_services.py  responses.py  runtime_assets.py  services.py
inspection_split_platformio_final_implemented/upper_computer/src/inspection_hmi_gateway/inspection_hmi_gateway/server/routers/: __init__.py  actions.py  auth.py  diagnostics.py  health.py  replay.py  results.py  station.py
inspection_split_platformio_final_implemented/upper_computer/src/inspection_hmi_gateway/launch/: hmi_gateway.launch.py
inspection_split_platformio_final_implemented/upper_computer/src/inspection_sim/: package.xml  setup.cfg  setup.py
inspection_split_platformio_final_implemented/upper_computer/src/inspection_utils/: package.xml  setup.cfg  setup.py
inspection_split_platformio_final_implemented/upper_computer/src/inspection_utils/inspection_utils/: compatibility.py  compatibility_validator.py  config.py  config_errors.py  control_protocol.py  lifecycle.py  lifecycle_matrix.py  models.py  param_parsing.py  paths.py  profile_resolver.py  protocol.py  read_model_store.py  recipe_tools.py  recipe_validator.py  result_identity.py  runtime_bundle_builder.py  transport_contracts.py
inspection_split_platformio_final_implemented/upper_computer/src/vision_processing/: package.xml  setup.py
inspection_split_platformio_final_implemented/upper_computer/src/vision_processing/vision_processing/: detectors.py  performance.py  processor_node.py  processor_runtime.py
inspection_split_platformio_final_implemented/upper_computer/src/vision_processing/vision_processing/pipeline/: detector_registry.py  pipeline_manager.py  summary_builder.py
inspection_split_platformio_final_implemented/upper_computer/src/vision_processing/vision_processing/plugins/: __init__.py
inspection_split_platformio_final_implemented/upper_computer/src/vision_processing/vision_processing/postprocess/: consistency_checker.py
tmp_midi/: qilixiang.mid  qilixiang_real.mid  qinghuaci.mid  qinghuaci_real.mid  qingtian.mid  qingtian_real.mid
(+663 files in other folders)
