<?xml version="1.0"?>
<package format="3"><name>inspection_bringup</name><version>0.1.0</version><description>Launch files for inspection station.</description><maintainer email="student@example.com">student</maintainer><license>MIT</license><buildtool_depend>ament_python</buildtool_depend><exec_depend>ament_index_python</exec_depend><exec_depend>launch</exec_depend><exec_depend>launch_ros</exec_depend><exec_depend>inspection_decision</exec_depend><exec_depend>inspection_diagnostics</exec_depend><exec_depend>inspection_fsm</exec_depend><exec_depend>inspection_hmi</exec_depend><exec_depend>inspection_hmi_gateway</exec_depend><exec_depend>inspection_logger</exec_depend><exec_depend>inspection_orchestrator</exec_depend><exec_depend>inspection_supervisor</exec_depend><exec_depend>inspection_utils</exec_depend><exec_depend>station_bridge</exec_depend><exec_depend>vision_acquisition</exec_depend><exec_depend>vision_processing</exec_depend></package>
