<?xml version="1.0"?>
<package format="3">
  <name>inspection_fsm</name>
  <version>0.1.0</version>
  <description>Finite-state machine coordinator for station cycle.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>inspection_interfaces</exec_depend>
</package>
