<?xml version="1.0"?>
<package format="3">
  <name>inspection_hmi_gateway</name>
  <version>0.1.0</version>
  <description>HTTP/WebSocket gateway for the inspection HMI frontend.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>inspection_interfaces</exec_depend>
  <exec_depend>inspection_utils</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>fastapi</exec_depend>
  <exec_depend>uvicorn</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
</package>
