<?xml version="1.0"?>
<package format="3">
  <name>inspection_sim</name>
  <version>0.1.0</version>
  <description>Simulation helpers and offline sample publisher.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
